# Hydraulink

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  pytest.ini  test.html
config/: settings.py  urls.py
press/: apps.py  forms.py  models.py  urls.py  views.py
press/migrations/: 0001_initial.py
press/templates/press/: 404.html  index.html  password.html
press/tests/: test_404.py  test_utils.py  test_views.py
press/utils/: metadata.py  rate_limit.py  shortener.py  validators.py
templates/: base.html
templates/shared/: messages.html  navbar.html
users/: urls.py  views.py
users/templates/users/: login.html  register.html  shorturl-list.html
