[project]
name = "hydraulink"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "django>=5.2.3",
    "django-environ>=0.12.0",
    "lxml>=6.0.0",
    "psycopg[binary]>=3.2.9",
    "pytest-django>=4.11.1",
    "redis>=6.2.0",
    "requests>=2.32.4",
    "shortuuid>=1.0.13",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["E", "F", "I"]
fixable = ["E", "F", "I"]
